update client Layout UI,  update api Models,
- add timestamp for ChatRoom model, ChatMessage
- edit controllers response 400 message
- edit swagger
