# server/src/models/ChatRoom.model.ts
@@ -4,6 +4,8 @@ import { IUserDocument } from "./User.model";
 export interface IChatRoom {
   name: string;
   users: Types.Array<Types.ObjectId>;
+  createdAt: Date;
+  updatedAt: Date;
 }
 
 export interface IChatRoomDocument extends IChatRoom, Document {}
@@ -15,10 +17,13 @@ export interface IChatRoomModel extends Model<IChatRoomDocument> {
 export interface IPopludateChatRoom {
   users: Types.Array<IUserDocument> | null;
 }
-const schema = new Schema<IChatRoomDocument, IChatRoomModel>({
-  name: { type: String, required: true },
-  users: [{ type: Schema.Types.ObjectId, ref: "User" }],
-});
+const schema = new Schema<IChatRoomDocument, IChatRoomModel>(
+  {
+    name: { type: String, required: true },
+    users: [{ type: Schema.Types.ObjectId, ref: "User" }],
+  },
+  { timestamps: true }
+);
 
 schema.statics.hasUserInRoom = async function (roomId: string, userId: string) {
   return !!(await this.findOne({
